test: add tests for tokenizer, parser, cleaner
Add new test cases for tokenizer, parser and cleaner. Improve tokenizer
method names.